--- a/myQuartzNET/myQuartzNET/myQuartzNET.csproj
+++ b/myQuartzNET/myQuartzNET/myQuartzNET.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="example1\HelloJob.cs" />
     <Compile Include="example1\SimpleExample.cs" />
+    <Compile Include="exampleExt\JobDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
