--- a/myQuartzNET/myQuartzNET/myQuartzNET.csproj
+++ b/myQuartzNET/myQuartzNET/myQuartzNET.csproj
@@ -61,6 +61,8 @@
     <Compile Include="example3\DumbJobExt.cs" />
     <Compile Include="example3\HelloJob.cs" />
     <Compile Include="example3\SimpleExample.cs" />
+    <Compile Include="example4\HelloJob.cs" />
+    <Compile Include="example4\SimpleExample.cs" />
     <Compile Include="exampleExt\JobDemo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
