1月19日 新加了不同作业之间并行的测试

--- a/myQuartzNET/myQuartzNET/myQuartzNET.csproj
+++ b/myQuartzNET/myQuartzNET/myQuartzNET.csproj
@@ -65,7 +65,10 @@
     <Compile Include="example4\SimpleExample.cs" />
     <Compile Include="exampleDb\HelloJob.cs" />
     <Compile Include="exampleDb\SimpleExample.cs" />
+    <Compile Include="exampleExt\BaseJobDemo.cs" />
     <Compile Include="exampleExt\JobDemo.cs" />
+    <Compile Include="exampleExt\JobDemo2.cs" />
+    <Compile Include="exampleExt\JobDemo3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
